--- a/Views/partials/footer.ejs
+++ b/Views/partials/footer.ejs
@@ -1,4 +1,5 @@
-<footer class="page-footer font-small primary">
+<div style="height: 20vh;"></div>
+<footer id="footer" class="page-footer font-small primary">
 
   <!-- Copyright -->
   <div class="well text-center footer">© 2020 Copyright:
