--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,58 +1,69 @@
-.thumbnail img{
-	width: 100% !important;
+.thumbnail img {
+  width: 100% !important;
 }
 
-.thumbnail{
-	padding: 0;
+.thumbnail {
+  padding: 0;
 }
 
-.thumbnail .caption-full{
-	padding: 9px;
-	
+.thumbnail .caption-full {
+  padding: 9px;
 }
-.delete-form{
-	display: inline;
+.delete-form {
+  display: inline;
 }
-.list-group li a{
-	text-decoration: none;
-	color: #fff;
+.list-group li a {
+  text-decoration: none;
+  color: #fff;
 }
-.color{
-	background-repeat: no-repeat; 
-	background-color: black !important;
-	background-image: url("https://images.unsplash.com/photo-1535846417087-ff0057791ecf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1432&q=80");
-	background-size: cover;
-	height: 400px;
-	color: #fff;
+.color {
+  background-repeat: no-repeat;
+  background-color: black !important;
+  background-image: url("https://images.unsplash.com/photo-1535846417087-ff0057791ecf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1432&q=80");
+  background-size: cover;
+  height: 400px;
+  color: #fff;
 }
-.container{
-	width: 75%;
+.container {
+  width: 75%;
 }
-.glyphicon{
-	padding-right: 10px;
-}
-
-#hr{
-	padding: 0;
-	margin: 5px 0;
-}
-.inline{
-	display: inline;
+.glyphicon {
+  padding-right: 10px;
 }
 
-.pad{
-	margin:5px 10px;
+#hr {
+  padding: 0;
+  margin: 5px 0;
 }
-.footer{
-	position: relative;
-	width: 100%;
-	z-index: 1;
-
+.inline {
+  display: inline;
 }
 
-.link{
-	margin-left: 15px;
-	margin-bottom: 10px;
-	color: steelblue;
-	font-weight: bold;
+.pad {
+  margin: 5px 10px;
+}
+.footer {
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+
+.link {
+  margin-left: 15px;
+  margin-bottom: 10px;
+  color: steelblue;
+  font-weight: bold;
+}
+
+#body {
+  padding: 10px; /* Height of the footer */
+}
+
+#footer {
+  width: 100%;
+  height: 15%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  clear: both;
 }
