--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>YelpCamp</title>
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>YelpCamp</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
 
-	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a href="/" class="navbar-brand">YelpCamp</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <% if (!currentUser){ %>
+            <li><a href="/login" class="">Login</a></li>
+            <li><a href="/register" class="">Sign up</a></li>
+            <%} else { %>
+            <li>
+              <a
+                ><span class="glyphicon glyphicon-user"></span
+                ><%=currentUser.username %></a
+              >
+            </li>
+            <li><a href="/logout" class="">Log out</a></li>
+            <%}%>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a href="/" class="navbar-brand">YelpCamp</a>
-		</div>
-		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<% if (!currentUser){ %>
-					<li><a href="/login" class="">Login</a></li>
-					<li><a href="/register" class="">Sign up</a></li>
-				<%} else { %>
-					<li><a><span class="glyphicon glyphicon-user"></span><%=currentUser.username %></a></li>
-					<li><a href="/logout" class="">Log out</a></li>
-				<%}%>
-			</ul>
-			
-		</div>
-	</div>	
-	
-</nav>
-
-<div class="container">
-	
-
-	<%if(error && error.length>0){%>
-		<div class="alert alert-danger" role="alert">
-			<%= error %>
-		</div>
-	<%}%>
-
-	<%if(success && success.length>0){%>
-		<div class="alert alert-info" role="alert">
-			<%= success %>
-		</div>
-	<%}%>
-</div>
+    <div class="container">
+      <%if(error && error.length>0){%>
+      <div class="alert alert-danger" role="alert">
+        <%= error %>
+      </div>
+      <%}%> <%if(success && success.length>0){%>
+      <div class="alert alert-info" role="alert">
+        <%= success %>
+      </div>
+      <%}%>
+    </div>
+  </body>
+</html>
