--- a/Views/campgrounds/campgrounds.ejs
+++ b/Views/campgrounds/campgrounds.ejs
@@ -1,40 +1,37 @@
 <%- include("../partials/header") %>
 
+<div class="container">
+  <header class="jumbotron color">
+    <div class="container">
+      <h1>YelpCamp</h1>
+      <p>View our hand-picked campground from all over the world</p>
+      <p>
+        <a class="btn btn-success res-btn btn-lg" href="/campgrounds/new"
+          >Add new campground</a
+        >
+      </p>
+    </div>
+  </header>
 
+  <div class="row text-center" style="display: flex; flex-wrap: wrap;">
+    <% campgrounds.forEach((campground)=>{ %>
 
-<div class="container">	
-	<header class="jumbotron color">
-		<div class="container">
-		<h1>YelpCamp</h1>
-		<p>View our hand-picked campground from all over the world</p>
-		<p>
-		<a class="btn btn-success btn-lg" href="/campgrounds/new">Add new campground</a>
-		</p>
-		</div>
-	</header>
+    <div class="col-md-3 col-sm-6">
+      <div class="thumbnail">
+        <img src="<%= campground.image %>" />
+        <div class="caption">
+          <h4><%= campground.name %></h4>
+        </div>
+        <p>
+          <a href="/campgrounds/<%=campground._id%>" class="btn btn-primary"
+            >More info</a
+          >
+        </p>
+      </div>
+    </div>
 
-	
-
-	
-
-	<div class="row text-center" style="display: flex; flex-wrap: wrap;" >
-		<% campgrounds.forEach((campground)=>{ %>
-			
-			<div class="col-md-3 col-sm-6">
-				<div class="thumbnail">
-					<img src="<%= campground.image %>">
-					<div class="caption">
-						<h4> <%= campground.name %> </h4>
-					</div>
-					<p>
-						<a href="/campgrounds/<%=campground._id%>" class="btn btn-primary">More info</a>
-					</p>
-					
-				</div>
-			</div>
-
-		<% }) %>
-	</div>
+    <% }) %>
+  </div>
 </div>
 
 <%- include("../partials/footer") %>
