--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -68,8 +68,11 @@
   clear: both;
 }
 
-@media only screen and (min-width: 400px) {
-  #sidebar {
-    display: none !important;
+@media (max-width: 576px) {
+  /* p {
+    font-size: 0.8em;
+  } */
+  .res-btn {
+    white-space: normal;
   }
 }
